--- a/cardstylesheet.css
+++ b/cardstylesheet.css
@@ -1,32 +1,51 @@
-body {
-  font: 14px "Helvetica", "Arial", sans-serif;  
-  padding: 10px;
-  border: 5px solid #eee;
-  max-width: 300px;
-  background-color: #bd3ebd; 
-  margin: 5px;
+/* 
+==========================================================================
+ Reset Body
+==========================================================================
+*/
+body,html {
+    background-color: #fff;
 }
 
-/* HEADING */
+body {
+    font: 14px Helvetica,Arial,sans-serif;
+    padding: 10px;
+    border: 5px solid #eee;
+    max-width: 300px;
+    background-color: #bd3ebd;
+    margin: 5px;
+}
 
+/* 
+==========================================================================
+Page wrapper
+==========================================================================
+*/
 #page-wrapper {
-  width: 300px;
-  margin: 0 auto;
+    position: relative;
+    width: 100%;
+    max-width: 120em;
+    margin: 0 auto;
+    padding: 0;
+    overflow: hidden;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .description {
-  margin: 10px 0 5px 0;
-  border: 2px solid #eee;
-  padding: 10px;
- } 
+    margin: 10px 0 5px;
+    border: 2px solid #eee;
+    padding: 10px;
+}
 
 .screenshot {
-  border: 0;
+    border: 0;
 }
 
 .item {
-  text-align: left;
-  background-color: #c0c2ff;
-  font-weight: bold;
-  list-style: none;
+    text-align: left;
+    background-color: #c0c2ff;
+    font-weight: 700;
+    list-style: none;
 }
